wxcl/wxclParser.py
# Generated from /Users/macbookpro/Desktop/antlr/wxclDefinition/wxcl.g4 by ANTLR 4.13.2
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class wxclParser ( Parser ):

    grammarFileName = "wxcl.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'project'", "':'", "';'", "'navigationBar'", 
                     "'{'", "','", "'}'", "'page'", "'-'", "'=>'", "'swiper'", 
                     "'['", "']'", "'text'", "'image'", "'button'", "'<'", 
                     "'>'", "'navigation'", "'submit'", "'reset'", "'list'", 
                     "'form'", "'label'", "'radio-group'", "'*'", "'checkbox-group'", 
                     "'input'", "'password'", "'view'", "'navigator'", "'''", 
                     "'color'", "'width'", "'height'", "'border'", "'('", 
                     "')'", "'width-initial'", "'color-initial'", "'position'", 
                     "'font'", "'align'", "'background'", "'spacing'", "'border-radius'", 
                     "'padding'", "'listCol'", "'listColHeight'", "'interval'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "Theme", "BorderStyle", 
                      "HorizontalValue", "VerticalValue", "FontWeight", 
                      "ColorValue", "HexColor", "Boolean", "Unit", "Number", 
                      "String", "WS", "VariableName", "Comment" ]

    RULE_project = 0
    RULE_navigationBar = 1
    RULE_appStyleVariableList = 2
    RULE_pageList = 3
    RULE_page = 4
    RULE_pageContent = 5
    RULE_styleVariableList = 6
    RULE_styleVariable = 7
    RULE_component = 8
    RULE_swiper = 9
    RULE_ablum = 10
    RULE_text = 11
    RULE_image = 12
    RULE_button = 13
    RULE_function = 14
    RULE_list = 15
    RULE_form = 16
    RULE_label = 17
    RULE_radioGroup = 18
    RULE_radioOption = 19
    RULE_checkboxGroup = 20
    RULE_checkboxOption = 21
    RULE_input = 22
    RULE_inputType = 23
    RULE_view = 24
    RULE_navigator = 25
    RULE_gui = 26
    RULE_style = 27
    RULE_color = 28
    RULE_width = 29
    RULE_height = 30
    RULE_border = 31
    RULE_borderWidth = 32
    RULE_borderColor = 33
    RULE_position = 34
    RULE_font = 35
    RULE_fontSize = 36
    RULE_textAlign = 37
    RULE_background = 38
    RULE_spacing = 39
    RULE_borderRadius = 40
    RULE_rpxValue = 41
    RULE_padding = 42
    RULE_list_col = 43
    RULE_list_rowHeight = 44
    RULE_swiper_interval = 45

    ruleNames =  [ "project", "navigationBar", "appStyleVariableList", "pageList", 
                   "page", "pageContent", "styleVariableList", "styleVariable", 
                   "component", "swiper", "ablum", "text", "image", "button", 
                   "function", "list", "form", "label", "radioGroup", "radioOption", 
                   "checkboxGroup", "checkboxOption", "input", "inputType", 
                   "view", "navigator", "gui", "style", "color", "width", 
                   "height", "border", "borderWidth", "borderColor", "position", 
                   "font", "fontSize", "textAlign", "background", "spacing", 
                   "borderRadius", "rpxValue", "padding", "list_col", "list_rowHeight", 
                   "swiper_interval" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    T__31=32
    T__32=33
    T__33=34
    T__34=35
    T__35=36
    T__36=37
    T__37=38
    T__38=39
    T__39=40
    T__40=41
    T__41=42
    T__42=43
    T__43=44
    T__44=45
    T__45=46
    T__46=47
    T__47=48
    T__48=49
    T__49=50
    Theme=51
    BorderStyle=52
    HorizontalValue=53
    VerticalValue=54
    FontWeight=55
    ColorValue=56
    HexColor=57
    Boolean=58
    Unit=59
    Number=60
    String=61
    WS=62
    VariableName=63
    Comment=64

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProjectContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def String(self):
            return self.getToken(wxclParser.String, 0)

        def navigationBar(self):
            return self.getTypedRuleContext(wxclParser.NavigationBarContext,0)


        def appStyleVariableList(self):
            return self.getTypedRuleContext(wxclParser.AppStyleVariableListContext,0)


        def pageList(self):
            return self.getTypedRuleContext(wxclParser.PageListContext,0)


        def getRuleIndex(self):
            return wxclParser.RULE_project

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProject" ):
                listener.enterProject(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProject" ):
                listener.exitProject(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProject" ):
                return visitor.visitProject(self)
            else:
                return visitor.visitChildren(self)




    def project(self):

        localctx = wxclParser.ProjectContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_project)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 92
            self.match(wxclParser.T__0)
            self.state = 93
            self.match(wxclParser.T__1)
            self.state = 94
            self.match(wxclParser.String)
            self.state = 95
            self.match(wxclParser.T__2)
            self.state = 96
            self.navigationBar()
            self.state = 97
            self.appStyleVariableList()
            self.state = 98
            self.pageList()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class NavigationBarContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ColorValue(self):
            return self.getToken(wxclParser.ColorValue, 0)

        def String(self):
            return self.getToken(wxclParser.String, 0)

        def HexColor(self):
            return self.getToken(wxclParser.HexColor, 0)

        def getRuleIndex(self):
            return wxclParser.RULE_navigationBar

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNavigationBar" ):
                listener.enterNavigationBar(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNavigationBar" ):
                listener.exitNavigationBar(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNavigationBar" ):
                return visitor.visitNavigationBar(self)
            else:
                return visitor.visitChildren(self)




    def navigationBar(self):

        localctx = wxclParser.NavigationBarContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_navigationBar)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 100
            self.match(wxclParser.T__3)
            self.state = 101
            self.match(wxclParser.T__4)
            self.state = 102
            self.match(wxclParser.ColorValue)
            self.state = 103
            self.match(wxclParser.T__5)
            self.state = 104
            self.match(wxclParser.String)
            self.state = 105
            self.match(wxclParser.T__5)
            self.state = 106
            self.match(wxclParser.HexColor)
            self.state = 107
            self.match(wxclParser.T__6)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AppStyleVariableListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def styleVariable(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(wxclParser.StyleVariableContext)
            else:
                return self.getTypedRuleContext(wxclParser.StyleVariableContext,i)


        def getRuleIndex(self):
            return wxclParser.RULE_appStyleVariableList

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAppStyleVariableList" ):
                listener.enterAppStyleVariableList(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAppStyleVariableList" ):
                listener.exitAppStyleVariableList(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAppStyleVariableList" ):
                return visitor.visitAppStyleVariableList(self)
            else:
                return visitor.visitChildren(self)




    def appStyleVariableList(self):

        localctx = wxclParser.AppStyleVariableListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_appStyleVariableList)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 112
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==63:
                self.state = 109
                self.styleVariable()
                self.state = 114
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PageListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def page(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(wxclParser.PageContext)
            else:
                return self.getTypedRuleContext(wxclParser.PageContext,i)


        def getRuleIndex(self):
            return wxclParser.RULE_pageList

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPageList" ):
                listener.enterPageList(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPageList" ):
                listener.exitPageList(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPageList" ):
                return visitor.visitPageList(self)
            else:
                return visitor.visitChildren(self)




    def pageList(self):

        localctx = wxclParser.PageListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_pageList)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 116 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 115
                self.page()
                self.state = 118 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==8):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PageContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Number(self):
            return self.getToken(wxclParser.Number, 0)

        def String(self):
            return self.getToken(wxclParser.String, 0)

        def pageContent(self):
            return self.getTypedRuleContext(wxclParser.PageContentContext,0)


        def styleVariableList(self):
            return self.getTypedRuleContext(wxclParser.StyleVariableListContext,0)


        def getRuleIndex(self):
            return wxclParser.RULE_page

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPage" ):
                listener.enterPage(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPage" ):
                listener.exitPage(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPage" ):
                return visitor.visitPage(self)
            else:
                return visitor.visitChildren(self)




    def page(self):

        localctx = wxclParser.PageContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_page)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 120
            self.match(wxclParser.T__7)
            self.state = 121
            self.match(wxclParser.T__8)
            self.state = 122
            self.match(wxclParser.Number)
            self.state = 123
            self.match(wxclParser.T__1)
            self.state = 124
            self.match(wxclParser.String)
            self.state = 125
            self.match(wxclParser.T__4)
            self.state = 126
            self.pageContent()
            self.state = 127
            self.match(wxclParser.T__6)
            self.state = 128
            self.styleVariableList()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PageContentContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def component(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(wxclParser.ComponentContext)
            else:
                return self.getTypedRuleContext(wxclParser.ComponentContext,i)


        def getRuleIndex(self):
            return wxclParser.RULE_pageContent

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPageContent" ):
                listener.enterPageContent(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPageContent" ):
                listener.exitPageContent(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPageContent" ):
                return visitor.visitPageContent(self)
            else:
                return visitor.visitChildren(self)




    def pageContent(self):

        localctx = wxclParser.PageContentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_pageContent)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 133
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 3686909952) != 0):
                self.state = 130
                self.component()
                self.state = 135
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StyleVariableListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def styleVariable(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(wxclParser.StyleVariableContext)
            else:
                return self.getTypedRuleContext(wxclParser.StyleVariableContext,i)


        def getRuleIndex(self):
            return wxclParser.RULE_styleVariableList

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStyleVariableList" ):
                listener.enterStyleVariableList(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStyleVariableList" ):
                listener.exitStyleVariableList(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStyleVariableList" ):
                return visitor.visitStyleVariableList(self)
            else:
                return visitor.visitChildren(self)




    def styleVariableList(self):

        localctx = wxclParser.StyleVariableListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_styleVariableList)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 139
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==63:
                self.state = 136
                self.styleVariable()
                self.state = 141
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StyleVariableContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VariableName(self):
            return self.getToken(wxclParser.VariableName, 0)

        def gui(self):
            return self.getTypedRuleContext(wxclParser.GuiContext,0)


        def getRuleIndex(self):
            return wxclParser.RULE_styleVariable

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStyleVariable" ):
                listener.enterStyleVariable(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStyleVariable" ):
                listener.exitStyleVariable(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStyleVariable" ):
                return visitor.visitStyleVariable(self)
            else:
                return visitor.visitChildren(self)




    def styleVariable(self):

        localctx = wxclParser.StyleVariableContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_styleVariable)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 142
            self.match(wxclParser.VariableName)
            self.state = 143
            self.match(wxclParser.T__1)
            self.state = 144
            self.gui()
            self.state = 145
            self.match(wxclParser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ComponentContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def swiper(self):
            return self.getTypedRuleContext(wxclParser.SwiperContext,0)


        def text(self):
            return self.getTypedRuleContext(wxclParser.TextContext,0)


        def image(self):
            return self.getTypedRuleContext(wxclParser.ImageContext,0)


        def button(self):
            return self.getTypedRuleContext(wxclParser.ButtonContext,0)


        def list_(self):
            return self.getTypedRuleContext(wxclParser.ListContext,0)


        def form(self):
            return self.getTypedRuleContext(wxclParser.FormContext,0)


        def label(self):
            return self.getTypedRuleContext(wxclParser.LabelContext,0)


        def radioGroup(self):
            return self.getTypedRuleContext(wxclParser.RadioGroupContext,0)


        def checkboxGroup(self):
            return self.getTypedRuleContext(wxclParser.CheckboxGroupContext,0)


        def input_(self):
            return self.getTypedRuleContext(wxclParser.InputContext,0)


        def view(self):
            return self.getTypedRuleContext(wxclParser.ViewContext,0)


        def navigator(self):
            return self.getTypedRuleContext(wxclParser.NavigatorContext,0)


        def gui(self):
            return self.getTypedRuleContext(wxclParser.GuiContext,0)


        def VariableName(self):
            return self.getToken(wxclParser.VariableName, 0)

        def getRuleIndex(self):
            return wxclParser.RULE_component

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterComponent" ):
                listener.enterComponent(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitComponent" ):
                listener.exitComponent(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitComponent" ):
                return visitor.visitComponent(self)
            else:
                return visitor.visitChildren(self)




    def component(self):

        localctx = wxclParser.ComponentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_component)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 159
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [11]:
                self.state = 147
                self.swiper()
                pass
            elif token in [14]:
                self.state = 148
                self.text()
                pass
            elif token in [15]:
                self.state = 149
                self.image()
                pass
            elif token in [16]:
                self.state = 150
                self.button()
                pass
            elif token in [22]:
                self.state = 151
                self.list_()
                pass
            elif token in [23]:
                self.state = 152
                self.form()
                pass
            elif token in [24]:
                self.state = 153
                self.label()
                pass
            elif token in [25]:
                self.state = 154
                self.radioGroup()
                pass
            elif token in [27]:
                self.state = 155
                self.checkboxGroup()
                pass
            elif token in [28]:
                self.state = 156
                self.input_()
                pass
            elif token in [30]:
                self.state = 157
                self.view()
                pass
            elif token in [31]:
                self.state = 158
                self.navigator()
                pass
            else:
                raise NoViableAltException(self)

            self.state = 166
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==10:
                self.state = 161
                self.match(wxclParser.T__9)
                self.state = 164
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [32]:
                    self.state = 162
                    self.gui()
                    pass
                elif token in [63]:
                    self.state = 163
                    self.match(wxclParser.VariableName)
                    pass
                else:
                    raise NoViableAltException(self)



            self.state = 168
            self.match(wxclParser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SwiperContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ablum(self):
            return self.getTypedRuleContext(wxclParser.AblumContext,0)


        def getRuleIndex(self):
            return wxclParser.RULE_swiper

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSwiper" ):
                listener.enterSwiper(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSwiper" ):
                listener.exitSwiper(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSwiper" ):
                return visitor.visitSwiper(self)
            else:
                return visitor.visitChildren(self)




    def swiper(self):

        localctx = wxclParser.SwiperContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_swiper)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 170
            self.match(wxclParser.T__10)
            self.state = 171
            self.match(wxclParser.T__11)
            self.state = 173
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==61:
                self.state = 172
                self.ablum()


            self.state = 175
            self.match(wxclParser.T__12)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AblumContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def String(self, i:int=None):
            if i is None:
                return self.getTokens(wxclParser.String)
            else:
                return self.getToken(wxclParser.String, i)

        def getRuleIndex(self):
            return wxclParser.RULE_ablum

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAblum" ):
                listener.enterAblum(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAblum" ):
                listener.exitAblum(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAblum" ):
                return visitor.visitAblum(self)
            else:
                return visitor.visitChildren(self)




    def ablum(self):

        localctx = wxclParser.AblumContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_ablum)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 177
            self.match(wxclParser.String)
            self.state = 182
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==6:
                self.state = 178
                self.match(wxclParser.T__5)
                self.state = 179
                self.match(wxclParser.String)
                self.state = 184
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TextContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def String(self):
            return self.getToken(wxclParser.String, 0)

        def getRuleIndex(self):
            return wxclParser.RULE_text

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterText" ):
                listener.enterText(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitText" ):
                listener.exitText(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitText" ):
                return visitor.visitText(self)
            else:
                return visitor.visitChildren(self)




    def text(self):

        localctx = wxclParser.TextContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_text)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 185
            self.match(wxclParser.T__13)
            self.state = 186
            self.match(wxclParser.T__8)
            self.state = 187
            self.match(wxclParser.String)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ImageContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def String(self):
            return self.getToken(wxclParser.String, 0)

        def getRuleIndex(self):
            return wxclParser.RULE_image

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterImage" ):
                listener.enterImage(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitImage" ):
                listener.exitImage(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitImage" ):
                return visitor.visitImage(self)
            else:
                return visitor.visitChildren(self)




    def image(self):
